--- a/map.html
+++ b/map.html
@@ -121,8 +121,8 @@
     // ====== Configure CSVs ======
     // history covers real years (e.g., 2020–2024); prediction covers the future (e.g., 2025)
     const DATASETS = [
-      { key: 'history',    url: 'no2_merged_time_lat_lon.csv',    prediction: false },
-      { key: 'prediction', url: 'no2_prediction.csv',   prediction: true  }
+      { key: 'history',    url: 'o3_merged_unified.csv',    prediction: false },
+      { key: 'prediction', url: 'o3_prediction.csv',   prediction: true  }
     ];
 
     const OVERLAY_ALPHA = 0.55;
