--- a/map.html
+++ b/map.html
@@ -160,20 +160,22 @@
   function isAscii(s){ return /^[\x00-\x7F]*$/.test(s); }
 
   async function askGroq(prompt){
-    const q = (prompt ?? "").trim();
-    if (!q) throw new Error("Empty prompt.");
-    if (!isAscii(q)) throw new Error("Please use English letters (ASCII only).");
+  const q = (prompt ?? "").trim();
+  if (!q) throw new Error("Empty prompt.");
+  if (!isAscii(q)) throw new Error("Please use English letters (ASCII only).");
 
-    const r = await fetch("/api/groq", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ prompt: q, model: GROQ_MODEL })
-    });
+  const r = await fetch("/api/groq", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ prompt: q, model: GROQ_MODEL })
+  });
 
-    const j = await r.json().catch(()=> ({}));
-    if (!r.ok) throw new Error(j?.error || "Server error");
-    return j?.text ?? "(no response)";
-  }
+  const text = await r.text();
+  let j; try { j = JSON.parse(text); } catch {}
+  if (!r.ok) throw new Error(j?.error || text || `HTTP ${r.status}`);
+  return j?.text ?? "(no response)";
+}
+
 
   // Chat UI
   (function(){
